package cn.yingming.grpc1;

import io.grpc.ManagedChannel;
import io.grpc.ManagedChannelBuilder;
import io.grpc.bistream.*;
import io.grpc.stub.StreamObserver;

import java.io.BufferedReader;
import java.io.IOException;
import java.io.InputStreamReader;

import java.text.SimpleDateFormat;
import java.util.Date;
import java.util.UUID;
import java.util.concurrent.locks.ReentrantLock;

// The basic client of task 1 and task 2.
public class BiStreamClient3 {
    private ManagedChannel channel;
    // not used because they just have Bi-directional Mode. Just need asynStub
    // private final CommunicateGrpc.CommunicateBlockingStub blockingStub;
    private CommunicateGrpc.CommunicateStub asynStub;
    private String host;
    private int port;
    private String uuid;
    private String name;
    private final ReentrantLock lock;
    public BiStreamClient3(String host, int port) {
        this.host = host;
        this.port = port;
        // Build Channel and use plaintext
        this.channel = ManagedChannelBuilder.forAddress(host, port).usePlaintext().build();
        System.out.println(channel.getState(false));
        // Generate Stub
        this.asynStub = CommunicateGrpc.newStub(channel);
        this.uuid = UUID.randomUUID().toString();
        this.name = null;
        this.lock = new ReentrantLock();
    }

    private void start(String name){
        // Service 1
        StreamObserver<StreamRequest> requestStreamObserver = asynStub.createConnection(new StreamObserver<StreamResponse>() {
            @Override
            public void onNext(StreamResponse streamResponse) {
                // System.out.println("1:" + Thread.currentThread().toString());
                // System.out.println(channel.isShutdown());
                // System.out.println(channel.isTerminated());
                System.out.println(channel.getState(false));
                System.out.println(streamResponse.getTimestamp() + " [" + streamResponse.getName() + "]: " + streamResponse.getMessage());
            }

            @Override
            public void onError(Throwable throwable) {
                System.out.println(throwable.getMessage());
                channel.shutdown();

                // System.out.println(channel.isShutdown());
                // System.out.println(channel.isTerminated());
            }

            @Override
            public void onCompleted() {
                System.out.println("onCompleted");
            }
        });
        // Join request.
        join(requestStreamObserver);

        // Stdin Input
        BufferedReader in = new BufferedReader(new InputStreamReader(System.in));

        while(true){
            try {
                System.out.println(">");
                System.out.flush();
                String line = in.readLine();
                System.out.println("[ Send msg ]: " + line);
                System.out.println("2:" + Thread.currentThread().toString());
                // set up time for msg
                Date d = new Date();
                SimpleDateFormat dft = new SimpleDateFormat("hh:mm:ss");
                StreamRequest msgReq = StreamRequest.newBuilder()
                        .setSource(uuid)
                        .setName(name)
                        .setMessage(line)
                        .setTimestamp(dft.format(d))
                        .build();
                System.out.println(channel.getState(false));
                requestStreamObserver.onNext(msgReq);
                System.out.println("3:" + Thread.currentThread().toString());

                // System.out.println(channel.isShutdown());
                // System.out.println(channel.isTerminated());
            }
            catch(Exception e){
                e.printStackTrace();
            }
        }
    }

    private void join(StreamObserver requestStreamObserver){
        // Join
        StreamRequest joinReq = StreamRequest.newBuilder()
                .setJoin(true)
                .setSource(uuid)
                .setName(name)
                .build();
        System.out.println(joinReq.toString());
        requestStreamObserver.onNext(joinReq);
    }

    private String setName() throws IOException {

        BufferedReader in = new BufferedReader(new InputStreamReader(System.in));
        System.out.println("Input Name.");
        System.out.println(">");
        System.out.flush();
        String line = in.readLine().trim();
        this.name = line;
        return line;

    }

    public static void main(String[] args) throws IOException {
        BiStreamClient3 client = new BiStreamClient3(args[0], Integer.parseInt(args[1]));
        System.out.printf("Connect to gRPC server: %s:%s \n", args[0], Integer.parseInt(args[1]));
        String nameStr = client.setName();
        client.start(nameStr);

    }
}
